feature: Some htmls and css

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,3 +1,75 @@
+* {
+  border:1px solid red;
+}
+
 body {
-  background: radial-gradient(circle, rgba(63,94,251,1) 0%, rgba(252,70,107,1) 100%);
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  background-color: #c1b7cc;
+  position: fixed; 
+  margin: 0%;
+}
+
+nav {
+  display: flex;
+  flex-direction: row;
+  width:  96.5vw;
+  height:  20vh;
+  background-color: #f1ebf3;
+  margin: .5% .5% .5% 1%;
+  border-radius: 9%;
+  align-items: center;
+}
+
+.nav-user {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 16vw;
+  height: 17vh;
+  margin: .75%  1% 1% 1%;
+  background-color: #e3d0f8;
+  border-radius: 9%;
+}
+
+p {
+  font-size: 1.5vw;
+}
+
+h1 {
+  font-size: 2.7vw;
+  margin-left: 10%;
+}
+
+main {
+  display: flex;
+  width: 100vw;
+  height: 80vh;  
+}
+
+.filter-panel {
+  display: flex;
+  flex-direction: column;
+  align-items: center; 
+  width: 18vw;
+  height: 73vh;
+  margin: .5% 1% .5% 1%; 
+  border-radius: 9%;
+  background-color: #f1ebf3;
+  overflow-y: scroll;
+  overflow-x: hidden;
+}
+
+.main-panel {
+  display: flex;
+  flex-wrap: wrap;
+  width: 76.5vw;
+  height: 73vh;
+  margin: .5% .5% .5% 1%;
+  border-radius: 3%;
+  background-color: #f1ebf3;
+  overflow-y: scroll;
+  overflow-x: hidden;
 }
