--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -34,11 +34,17 @@ nav {
   border-radius: 9%;
 }
 
-p {
-  font-size: 1.5vw;
+h1 {
+  font-size: 3.7vw;
+  margin-left: 10%;
 }
 
-h1 {
+h2 {
+  font-size: 2.7vw;
+  margin-left: 10%;
+}
+
+h3 {
   font-size: 2.7vw;
   margin-left: 10%;
 }
