--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -40,12 +40,17 @@ h1 {
 }
 
 h2 {
-  font-size: 2.7vw;
+  font-size: 1vw;
   margin-left: 10%;
 }
 
 h3 {
-  font-size: 2.7vw;
+  font-size: .8vw;
+  margin-left: 10%;
+}
+
+h4 {
+  font-size: 1vw;
   margin-left: 10%;
 }
 
@@ -78,4 +83,17 @@ main {
   background-color: #f1ebf3;
   overflow-y: scroll;
   overflow-x: hidden;
+}
+
+.booked {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: .8vw;
+  width: 16vw;
+  height: 16vh;
+  margin: 2% 0% 0% 4%;
+  position: relative;
+  border: 0%;
+  background-color: #c1b7cc;
 }
